--- a/apps/my-app-one/package.json
+++ b/apps/my-app-one/package.json
@@ -9,7 +9,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@vanilla-extract/css": "^1.11.1",
+    "@vanilla-extract/css": "1.11.1",
     "next": "13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,7 +18,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@vanilla-extract/next-plugin": "^2.1.3",
+    "@vanilla-extract/next-plugin": "2.1.3",
     "typescript": "^4.8.3"
   }
 }
