--- a/apps/my-app-two/package.json
+++ b/apps/my-app-two/package.json
@@ -9,10 +9,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "fake-design-library": "file:../../fake-design-library",
     "next": "13.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "test-app": "file:../../test-app"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
